--- a/app.ipynb
+++ b/app.ipynb
@@ -20,7 +20,26 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n"
+      " * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n",
+      "[2021-10-06 16:48:46,646] ERROR in app: Exception on / [GET]\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Users\\iywzm\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 2447, in wsgi_app\n",
+      "    response = self.full_dispatch_request()\n",
+      "  File \"C:\\Users\\iywzm\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1952, in full_dispatch_request\n",
+      "    rv = self.handle_user_exception(e)\n",
+      "  File \"C:\\Users\\iywzm\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1821, in handle_user_exception\n",
+      "    reraise(exc_type, exc_value, tb)\n",
+      "  File \"C:\\Users\\iywzm\\anaconda3\\lib\\site-packages\\flask\\_compat.py\", line 39, in reraise\n",
+      "    raise value\n",
+      "  File \"C:\\Users\\iywzm\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1950, in full_dispatch_request\n",
+      "    rv = self.dispatch_request()\n",
+      "  File \"C:\\Users\\iywzm\\anaconda3\\lib\\site-packages\\flask\\app.py\", line 1936, in dispatch_request\n",
+      "    return self.view_functions[rule.endpoint](**req.view_args)\n",
+      "  File \"<ipython-input-1-5e889ba15068>\", line 8, in index\n",
+      "    return render_template('index.html')\n",
+      "NameError: name 'render_template' is not defined\n",
+      "127.0.0.1 - - [06/Oct/2021 16:48:46] \"\u001b[35m\u001b[1mGET / HTTP/1.1\u001b[0m\" 500 -\n",
+      "127.0.0.1 - - [06/Oct/2021 16:48:49] \"\u001b[33mGET /favicon.ico HTTP/1.1\u001b[0m\" 404 -\n"
      ]
     }
    ],
